# RayTracer

./: CMakeLists.txt  README.md  color.h  main.cc  ray.h
CUDA/: CMakeLists.txt  ch4_red_circle_nsys.ppm  main.cu  ray.h  raytrace_profile.nsys-rep
images/: sky_gradient_circleCyan.ppm
